# of-mesh-converter

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/of_mesh_converter/: __init__.py  __main__.py  _cgns_hdf5.py  cgns_reader.py  elements.py  field_mapping.py  foam_writer.py  mesh_builder.py  mesh_ir.py  pipeline.py  sanitise.py  sanity_report.py
tests/: cgns_fixture.py  test_cgns_reader.py  test_elements.py  test_field_mapping.py  test_foam_writer.py  test_integration.py  test_mesh_builder.py  test_sanitise.py
tutorials/: README.md
tutorials/01_synthetic_box/: README.md  run.py
